--- a/index.html
+++ b/index.html
@@ -11,25 +11,33 @@
 	    	<h1>Highcarts Demo</h1>      
 	    	<p>This page will grow as we add more and more components from Bootstrap...</p>      
 	  	</div>
-	  	<div class='padding'>
+	  	<div class='padding border'>
 		  	<div class='row'>
-		  		<div class="col-md-6">
+		  		<div class="col-md-12">
 		  			<h3>Line Highchart</h3>
 		  			<div id="lineContainer" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 		  		</div>
-		  		<div class="col-md-6">
+		  	</div>
+		</div>
+		<div class='padding border'>
+		  	<div class='row'>
+		  		<div class="col-md-12">
 		  			<h3>Column Highchart</h3>
 		  			<div id="columnContainer" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 		  		</div>
 		  	</div>
-	  	</div>
-	  	<div class="padding">
+		</div>
+	  	<div class="padding border">
 		  	<div class='row'>
-		  		<div class="col-md-6">
+		  		<div class="col-md-12">
 		  			<h3>Combined Highchart</h3>
 		  			<div id="combinedContainer" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 		  		</div>
-		  		<div class="col-md-6">
+		  	</div>
+		</div>
+		<div class="padding border">
+		  	<div class='row'>
+		  		<div class="col-md-12">
 		  			<h3>Stacked column Highchart</h3>
 		  			<div id="stackContainer" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 		  		</div>
