--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 		<div class='padding border'>
 		  	<div class='row'>
 		  		<div class="col-md-12">
+		  			<h3>Dual Axis Line Highchart</h3>
+		  			<div id="dualAxisContainer" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+		  		</div>
+		  	</div>
+		</div>
+		<div class='padding border'>
+		  	<div class='row'>
+		  		<div class="col-md-12">
 		  			<h3>Column Highchart</h3>
 		  			<div id="columnContainer" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 		  		</div>
